Fix Networks assets modal on iPad - use align-items-start instead of align-items-center

--- a/web-dev-pro/web-dev-tools Extension/Resources/popup.css
+++ b/web-dev-pro/web-dev-tools Extension/Resources/popup.css
@@ -36,7 +36,7 @@ body {
   max-width: 100vw;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   html,
   body {
     min-width: 385px;
@@ -49,7 +49,7 @@ body {
   max-height: none;
   min-height: 560px;
   overscroll-behavior: none;
-  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 code,
@@ -119,8 +119,7 @@ main {
 .tab-panel.active {
   display: flex !important;
   min-height: 0;
-  overflow-y: auto !important;
-  overflow-x: hidden !important;
+  overflow: hidden auto !important;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -140,7 +139,7 @@ main {
   padding: 0.35rem 0.6rem;
 }
 
-button:not(.tab):not(.btn-sm) {
+button:not(.tab, .btn-sm) {
   padding: 6px 8px;
 }
 
@@ -369,6 +368,7 @@ summary.accordion-button::-webkit-details-marker {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -378,6 +378,7 @@ summary.accordion-button::-webkit-details-marker {
   from {
     opacity: 1;
   }
+
   to {
     opacity: 0;
   }
